--- a/pipelines/az-automation.yml
+++ b/pipelines/az-automation.yml
@@ -18,7 +18,6 @@ resources:
     owner: genevievelesperance
     repository: az-automation
     access_token: {{cf_infra_bot_user_github_access_token}}
-    drafts: false
 
 - name: infrastructure-ci
   type: git
@@ -30,7 +29,8 @@ resources:
   type: git
   source:
     branch: master
-    uri: https://github.com/genevievelesperance/homebrew-tap.git
+    uri: git@github.com:genevievelesperance/homebrew-tap.git
+    private_key: {{cf_infra_bot_user_github_private_key}}
 
 jobs:
 - name: test
@@ -71,8 +71,8 @@ jobs:
       params:
         version: { tag: release/version }
         globs:
-        - az-automation-*_osx
-        - az-automation-*_linux_x86-64
+        - az-automation-*-darwin-amd64
+        - az-automation-*-linux-amd64
       trigger: true
     - get: ci
       resource: infrastructure-ci
