--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1751,6 +1751,7 @@ jobs:
           globs:
           - bbl-*_osx
           - bbl-*_linux_x86-64
+          - bbl-*_windows
         trigger: true
       - get: ci
         resource: infrastructure-ci
