fix cluster path addressing and cp yaml block scalar
Signed-off-by: Genevieve LEsperance <glesperance@pivotal.io>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -501,8 +501,7 @@ jobs:
         args:
           - "-c"
           - >-
-            cp source/versions.yml destination/${BBL_STATE_DIR}/versions.yml \
-            && cp -r source/cluster/operations/* destination/${BBL_STATE_DIR}/operations/ \
+            cp -r source/* destination/${BBL_STATE_DIR}/
             && cp -r destination/* updated-env-repo
   - task: deploy-concourse
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
@@ -519,7 +518,7 @@ jobs:
       SYSTEM_DOMAIN: bbl-gcp-concourse.bbl-test.ci.cf-app.com
       VARS_STORE_FILE: bbl-gcp-concourse/deployment-vars.yml
       VARS_FILES: "bbl-gcp-concourse/concourse-defaults.yml bbl-gcp-concourse/concourse-secrets.yml bbl-gcp-concourse/versions.yml"
-      OPS_FILES: "bbl-gcp-concourse/operations/ports.yml bbl-gcp-concourse/operations/no-auth.yml bbl-gcp-concourse/operations/privileged-http.yml bbl-gcp-concourse/operations/privileged-https.yml bbl-gcp-concourse/operations/tls.yml bbl-gcp-concourse/operations/web-network-extension.yml"
+      OPS_FILES: "bbl-gcp-concourse/operations/ports.yml bbl-gcp-concourse/cluster/operations/no-auth.yml bbl-gcp-concourse/cluster/operations/privileged-http.yml bbl-gcp-concourse/cluster/operations/privileged-https.yml bbl-gcp-concourse/cluster/operations/tls.yml bbl-gcp-concourse/cluster/operations/web-network-extension.yml"
       MANIFEST_FILE: cluster/concourse.yml
     on_failure:
       do:
@@ -713,8 +712,7 @@ jobs:
         args:
           - "-c"
           - >-
-            cp source/versions.yml destination/${BBL_STATE_DIR}/versions.yml \
-            && cp -r source/cluster/operations/* destination/${BBL_STATE_DIR}/operations/ \
+            cp -r source/* destination/${BBL_STATE_DIR}/
             && cp -r destination/* updated-env-repo
   - task: deploy-concourse
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
@@ -734,7 +732,7 @@ jobs:
       SYSTEM_DOMAIN: bbl-azure-concourse.bbl-test.ci.cf-app.com
       VARS_STORE_FILE: bbl-azure-concourse/vars/bosh-deployment-vars.yml
       VARS_FILES: "bbl-azure-concourse/concourse-defaults.yml bbl-azure-concourse/concourse-secrets.yml bbl-azure-concourse/versions.yml"
-      OPS_FILES: "bbl-azure-concourse/operations/ports.yml bbl-azure-concourse/operations/no-auth.yml bbl-azure-concourse/operations/privileged-http.yml cluster/operations/privileged-https.yml cluster/operations/tls.yml cluster/operations/web-network-extension.yml"
+      OPS_FILES: "bbl-azure-concourse/operations/ports.yml bbl-azure-concourse/cluster/operations/no-auth.yml bbl-azure-concourse/cluster/operations/privileged-http.yml bbl-azure-concourse/cluster/operations/privileged-https.yml bbl-azure-concourse/cluster/operations/tls.yml bbl-azure-concourse/cluster/operations/web-network-extension.yml"
       MANIFEST_FILE: cluster/concourse.yml
     on_failure:
       do:
@@ -929,8 +927,7 @@ jobs:
         args:
           - "-c"
           - >-
-            cp source/versions.yml destination/${BBL_STATE_DIR}/versions.yml \
-            && cp -r source/cluster/operations/* destination/${BBL_STATE_DIR}/operations/ \
+            cp -r source/* destination/${BBL_STATE_DIR}/
             && cp -r destination/* updated-env-repo
   - task: deploy-concourse
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
@@ -947,7 +944,7 @@ jobs:
       SYSTEM_DOMAIN: bbl-aws-concourse.bbl-test.ci.cf-app.com
       VARS_STORE_FILE: bbl-aws-concourse/vars/bosh-deployment-vars.yml
       VARS_FILES: "bbl-aws-concourse/concourse-defaults.yml bbl-aws-concourse/concourse-secrets.yml bbl-aws-concourse/versions.yml"
-      OPS_FILES: "bbl-aws-concourse/operations/ports.yml bbl-aws-concourse/operations/no-auth.yml bbl-aws-concourse/operations/privileged-http.yml bbl-aws-concourse/operations/privileged-https.yml bbl-aws-concourse/operations/tls.yml bbl-aws-concourse/operations/web-network-extension.yml"
+      OPS_FILES: "bbl-aws-concourse/operations/ports.yml bbl-aws-concourse/cluster/operations/no-auth.yml bbl-aws-concourse/cluster/operations/privileged-http.yml bbl-aws-concourse/cluster/operations/privileged-https.yml bbl-aws-concourse/cluster/operations/tls.yml bbl-aws-concourse/cluster/operations/web-network-extension.yml"
       MANIFEST_FILE: cluster/concourse.yml
     on_failure:
       do:
