Test cf-d on bbl environment with single az ops-file.
Signed-off-by: Nick Roy <niroy@microsoft.com>

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1132,7 +1132,7 @@ jobs:
       BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       SYSTEM_DOMAIN: bbl-aws-cf.infrastructure.cf-app.com
       VARS_STORE_FILE: bbl-aws-cf/deployment-vars.yml
-      OPS_FILES: "operations/aws.yml operations/use-compiled-releases.yml"
+      OPS_FILES: "operations/aws.yml operations/use-compiled-releases.yml operations/scale-to-one-az.yml"
     ensure:
       do:
       - task: delete-cf-deployment
