--- a/pipelines/az-automation.yml
+++ b/pipelines/az-automation.yml
@@ -10,12 +10,12 @@ resources:
   type: git
   source:
     branch: master
-    uri: https://github.com/genevievelesperance/az-automation.git
+    uri: https://github.com/genevieve/az-automation.git
 
 - name: release
   type: github-release
   source:
-    owner: genevievelesperance
+    owner: genevieve
     repository: az-automation
     access_token: {{cf_infra_bot_user_github_access_token}}
 
@@ -29,7 +29,7 @@ resources:
   type: git
   source:
     branch: master
-    uri: git@github.com:genevievelesperance/homebrew-tap.git
+    uri: git@github.com:genevieve/homebrew-tap.git
     private_key: {{cf_infra_bot_user_github_private_key}}
 
 jobs:
