--- a/pipelines/leftovers.yml
+++ b/pipelines/leftovers.yml
@@ -68,12 +68,13 @@ jobs:
       passed: [build-release]
     - get: homebrew-tap
     - get: release
+      passed: [build-release]
+      trigger: true
       params:
         version: { tag: release/version }
         globs:
         - leftovers-*-darwin-amd64
         - leftovers-*-linux-amd64
-      trigger: true
     - get: ci
       resource: infrastructure-ci
   - task: bump-brew-tap
