Azure api be broken.
- Block on vsphere now!

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1037,8 +1037,9 @@ jobs:
       trigger: true
       passed:
       - aws-acceptance-tests
-      - azure-acceptance-tests
+      # - azure-acceptance-tests
       - gcp-acceptance-tests
+      - vsphere-acceptance-tests
 
 - name: bbl-aws-cf
   serial: true
